--- a/dom 3-dars/style.css
+++ b/dom 3-dars/style.css
@@ -31,3 +31,10 @@ form button {
     border-radius: 10px;
     outline: none;
 } */
+
+.box {
+    width: 100px;
+    background-color: red;
+    height: 100px;
+    margin: 10% 30%;
+}
