--- a/amaliyot/style.css
+++ b/amaliyot/style.css
@@ -5,7 +5,7 @@
     font-family: sans-serif;
 }
 
-.darkmod{
+.darkmod {
     background-color: black;
     color: white;
 }
@@ -14,7 +14,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    position: absolute;
+    /* position: absolute; */
     width: 100%;
     padding: 15px;
 
@@ -27,8 +27,9 @@ nav {
 
 }
 
-a{
+a {
     text-decoration: none;
+    font-size: 38px;
 }
 
 p {
@@ -70,3 +71,10 @@ p {
 
 /* ====================================================================================================================== */
 
+.carusel img {
+    width: 90%;
+    height: 840px;
+    margin: 0 5%;
+    border: 1px solid;
+    border-radius: 10px;
+}
