--- a/amaliyot/style.css
+++ b/amaliyot/style.css
@@ -71,10 +71,69 @@ p {
 
 /* ====================================================================================================================== */
 
+.carusel{
+    display: grid;
+    grid-template-columns:1575px 1575px 1575px 1575px  ;
+    overflow: auto;
+    gap: 10px;
+    transition: 1s;
+    max-width: 1600px;
+    margin: 30px auto;
+    grid-auto-rows: 600px;
+    padding: 10px;
+}
+
 .carusel img {
-    width: 90%;
-    height: 840px;
-    margin: 0 5%;
-    border: 1px solid;
+    height: 100%;
     border-radius: 10px;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
+}
+
+/* ==================modal======================= */
+
+.modal{
+    position: absolute;
+    border: 2px solid;
+    width: 95%;
+    height: 93%;
+    top: 35px;
+    left: 55px;
+    border-radius: 20px;
+    background: rgba(0, 0, 0, 0.25);
+    backdrop-filter: blur(30px);
+    transform: translateY(-950px);
+    transition: 0.3s;
+}
+.openModal{
+    transform: translateY(0px);
+}
+::selection{
+    background-color: transparent;
+}
+#close{
+    font-size: 30px;
+    margin-left: 1775px;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+.btnlar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+}
+
+.btnlar button {
+    padding: 7px 35px;
+    border: none;
+    border-radius: 5px;
+    transition: 0.5S;
+}
+
+.btnlar button:hover{
+    background-color: black;
+    color: white;
 }
