--- a/amaliyot/style.css
+++ b/amaliyot/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+    scroll-behavior: smooth;
 }
 
 .darkmod {
@@ -29,7 +30,6 @@ nav {
 
 a {
     text-decoration: none;
-    font-size: 38px;
 }
 
 p {
@@ -81,6 +81,7 @@ p {
     margin: 30px auto;
     grid-auto-rows: 600px;
     padding: 10px;
+    overflow: hidden;
 }
 
 .carusel img {
@@ -130,10 +131,7 @@ p {
     padding: 7px 35px;
     border: none;
     border-radius: 5px;
-    transition: 0.5S;
-}
-
-.btnlar button:hover{
-    background-color: black;
+    background-color: #333;
     color: white;
 }
+
