--- a/amaliyot/style.css
+++ b/amaliyot/style.css
@@ -5,72 +5,6 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
-
-.darkmod {
-    background-color: black;
-    color: white;
-}
-
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* position: absolute; */
-    width: 100%;
-    padding: 15px;
-
-}
-
-.menu {
-    display: flex;
-    align-items: center;
-    gap: 30px;
-
-}
-
-a {
-    text-decoration: none;
-}
-
-p {
-    text-decoration: none;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
-.menu p:hover {
-    color: rgb(255, 140, 0);
-
-}
-
-.buy {
-    font-size: 25px;
-    padding: 8px;
-    border-radius: 6px;
-}
-
-.icon-box .buy:hover {
-    background-color: rgba(104, 104, 104, 0.208);
-}
-
-.icon-box {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: 25px;
-}
-
-.moon {
-    padding: 8px;
-    border-radius: 6px;
-}
-
-.icon-box .moon:hover {
-    background-color: rgba(104, 104, 104, 0.208);
-}
-
-/* ====================================================================================================================== */
-
 .carusel{
     display: grid;
     grid-template-columns:1575px 1575px 1575px 1575px  ;
@@ -135,3 +69,55 @@ p {
     color: white;
 }
 
+/* ========================================== */
+
+.menu ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.menu li{
+    margin-bottom: 8px;
+    border-radius: 16px;
+    transition: all 0.2s ease;
+    position: relative;
+    cursor: pointer;
+}
+
+.menu li:hover{
+    background: rgba(126, 126, 126, 0.2);
+}
+
+.menu li.active{
+    background: rgba(115, 115, 115, 0.25);
+}
+
+.menu li.active::before{
+    content: '';
+    position: absolute;
+    left: -15px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 4px;
+    height: 20px;
+    /* background: var(--primary-color); */
+    border-radius: 0 4px 4px 0;
+}
+
+.menu a{
+    display: flex;
+    align-items: center;
+    /* color: #fff; */
+    padding: 12px 16px;
+    text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 0.3px;
+}
+
+.menu a i{
+    font-size: 20px;
+    margin-right: 14px;
+    min-width: 22px;
+    text-align: center;
+}
