--- a/dom 11-dars/style.css
+++ b/dom 11-dars/style.css
@@ -18,9 +18,9 @@ body {
     min-height: 800px;
 }
 
-h1 {
+.http {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 80px;
 }
 
 .title {
@@ -70,4 +70,50 @@ table {
 table td,
 th {
     padding: 12px;
+}
+
+.modalContainer{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+    left: 0;
+}
+
+.modalcontenet{
+    background-color: white;
+    padding: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    text-align: center;
+    border-radius: 10px;
+}
+
+.closemodal{
+    display: none;
+}
+
+.modalcontenet input {
+    width: 100%;
+    padding: 14px;
+    margin-top: 20px;
+    outline: none;
+}
+
+.modalcontenet button {
+    margin-top: 15px;
+    padding: 10px 45.3%;
+}
+
+
+
+#closeicon{
+    width: 30px;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
 }
