--- a/amaliyot/nav.css
+++ b/amaliyot/nav.css
@@ -68,3 +68,8 @@ p {
 .icon-box .moon:hover {
     background-color: rgba(104, 104, 104, 0.208);
 }
+
+
+/* ===================================================================== */
+
+
