--- a/amaliyot/style.css
+++ b/amaliyot/style.css
@@ -5,6 +5,7 @@
     font-family: sans-serif;
     scroll-behavior: smooth;
 }
+
 .carusel{
     display: grid;
     grid-template-columns:1575px 1575px 1575px 1575px  ;
@@ -65,8 +66,8 @@
     padding: 7px 35px;
     border: none;
     border-radius: 5px;
-    background-color: #333;
-    color: white;
+    background-color: transparent;
+   
 }
 
 /* ========================================== */
@@ -78,8 +79,9 @@
 }
 
 .menu li{
-    margin-bottom: 8px;
-    border-radius: 16px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    padding: 10px;
     transition: all 0.2s ease;
     position: relative;
     cursor: pointer;
@@ -120,4 +122,9 @@
     margin-right: 14px;
     min-width: 22px;
     text-align: center;
+}
+
+.smartfonlar{
+    border: 2px solid black;
+    background-color: rgba(0, 0, 0, 0.3);
 }
