--- a/dom 12-dars/style.css
+++ b/dom 12-dars/style.css
@@ -6,7 +6,12 @@
 }
 
 body {
-    margin: 30px;
+    margin: 20px;
+}
+
+
+img{
+    width: 200px;
 }
 
 nav {
@@ -29,61 +34,87 @@ nav input {
 .image {
     width: 100%;
     object-fit: cover;
+    margin-top: 20px;
+    border-radius: 10px;
 }
 
 .images {
-    border: 2px solid darkgreen;
     margin: 10px;
     padding: 10px;
     column-count: 4;
     gap: 20px;
+    border-radius: 10px;
+
 }
 
-/* ===================================================================== */
-
-/* From Uiverse.io by OnlyCodeChannel */
-.searchBox {
-    display: flex;
-    width: 50%;
-    align-items: center;
-    gap: 8px;
-    background: #2f3640;
-    border-radius: 50px;
-    position: relative;
+a{
+    margin-left: -200px;
+    font-size: 26px;
+    text-decoration: none;
+    color: darkgreen;
+    font-weight: 600;
+    border: 2px solid darkgreen;
+    padding: 10px;
+    border-radius: 10px;
 }
 
-.searchButton {
-    color: white;
-    position: absolute;
-    right: 8px;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background: var(--gradient-2, linear-gradient(90deg, #2AF598 0%, #009EFD 100%));
-    border: 0;
-    display: inline-block;
-    transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-}
-
-/*hover effect*/
-button:hover {
-    color: #fff;
-    background-color: #1A1A1A;
-    box-shadow: rgba(0, 0, 0, 0.5) 0 10px 20px;
-    transform: translateY(-3px);
-}
-
-/*button pressing effect*/
-button:active {
-    box-shadow: none;
-    transform: translateY(0);
-}
-
-.searchInput {
+.search-input {
     border: none;
     background: none;
     outline: none;
     color: white;
+    background-color: rgba(0, 0, 0, 0.5);
     font-size: 15px;
-    padding: 24px 46px 24px 26px;
+    padding: 14px;
+    border-radius: 8px;
+}
+
+::placeholder {
+    color: black;
+}
+
+.icon {
+    font-size: 30px;
+    position: absolute;
+    right: 26%;
+    padding: 3.5px;
+}
+
+.images {
+    margin-top: 30px;
+}
+
+#hashtag button{
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 8px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px;
+    transition: 1s;
+    cursor: pointer;
+    border: none;
+}
+
+
+#hashtag{
+    display: flex;
+}
+
+#hashtag button:hover {
+    transform: scale(1.05);
+    
+}
+
+.images p{
+    text-align: center;
+    font-size: 36px;
+}
+
+.input{
+    border: none;
+    border: 1px solid black;
+    border-radius: 10px;
 }
