--- a/dom 12-dars/video.css
+++ b/dom 12-dars/video.css
@@ -62,3 +62,27 @@ a{
     padding: 10px;
     border-radius: 10px;
 }
+
+#hashtag button {
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    border-radius: 8px;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin: 20px;
+    transition: 1s;
+    cursor: pointer;
+    border: none;
+}
+
+
+#hashtag {
+    display: flex;
+}
+
+#hashtag button:hover {
+    transform: scale(1.05);
+
+}
