--- a/sotuv sistem/style.css
+++ b/sotuv sistem/style.css
@@ -189,7 +189,8 @@ nav .hreflar a {
 .cardlar img {
   border-radius: 10px;
   transition: 1s;
-  padding-bottom: 20px;
+  /* padding-bottom: 20px; */
+
 
 }
 
@@ -200,5 +201,7 @@ nav .hreflar a {
 .cardlar .png {
   background-color: #C1C2C6;
   width: 500px;
-  height: 445px;
+  height: 450px;
+  margin-top: -5px;
+  
 }
