--- a/sotuv sistem/ombor.css
+++ b/sotuv sistem/ombor.css
@@ -41,3 +41,32 @@ nav .hreflar a {
   font-size: 20px;
   font-weight: 600;
 }
+
+.savdo-box {
+  margin-top: 8%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
+}
+
+.savdo-box input {
+  padding: 10px;
+  width: 18%;
+  border-radius: 10px;
+  overflow: none;
+  border: none;
+  border: 1px solid black;
+
+}
+
+.savdo-box .add {
+  padding: 10px;
+  width: 10%;
+  border-radius: 10px;
+  overflow: none;
+  border: none;
+  background-color: #033D62;
+  color: white;
+}
