--- a/sotuv sistem/savdo.css
+++ b/sotuv sistem/savdo.css
@@ -137,8 +137,13 @@ nav .hreflar a {
 }
 
 @keyframes animet {
-    0%{transform: scale(0);}
-    100%{transform: scale(1);}
+    0% {
+        transform: scale(0);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .exit {
@@ -159,12 +164,40 @@ nav .hreflar a {
     margin-bottom: 20px;
 }
 
-table, th, td {
-  border:1px solid black;
-  margin: 0 auto;
+.savdo-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
 }
 
-table tr td input {
-    width: 100%;
+.savdo-box input {
+    padding: 10px;
+    width: 18%;
+    border-radius: 10px;
+    overflow: none;
+    border: none;
+    border: 1px solid black;
 
+}
+
+.savdo-box .add {
+    padding: 10px;
+    width: 10%;
+    border-radius: 10px;
+    overflow: none;
+    border: none;
+    background-color: #033D62;
+    color: white;
+}
+
+.savdo-box .delete {
+    padding: 10px;
+    width: 10%;
+    border-radius: 10px;
+    overflow: none;
+    border: none;
+    background-color: #033D62;
+    color: white;
 }
