--- a/sotuv sistem/ombor/ombor.css
+++ b/sotuv sistem/ombor/ombor.css
@@ -42,16 +42,17 @@ nav .hreflar a {
   font-weight: 600;
 }
 
-.savdo-box {
+#savdo-box {
   margin-top: 8%;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 20px;
+  margin-bottom: 50px;
 
 }
 
-.savdo-box input {
+#savdo-box input {
   padding: 10px;
   width: 18%;
   border-radius: 10px;
@@ -61,7 +62,7 @@ nav .hreflar a {
 
 }
 
-.savdo-box .add {
+#savdo-box .add {
   padding: 10px;
   width: 10%;
   border-radius: 10px;
@@ -69,4 +70,49 @@ nav .hreflar a {
   border: none;
   background-color: #033D62;
   color: white;
+}
+
+.card {
+  border: 1px solid #ddd;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 8px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+}
+
+.btn{
+  padding: 5px 20px;
+  border: none;
+  color:  white;
+  border-radius: 5px;
+  height: 40px;
+  margin-left: 10px;
+}
+
+.btn1{
+  background-color: green;
+}
+
+.btn2{
+  background-color: red;
+}
+
+.btn3{
+  background-color: #333;
+}
+
+.btn-box {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: end;
+  row-gap: 20px;
+}
+
+.card-box {
+  width: 100%;
 }
