--- a/sotuv sistem/profile/profil.css
+++ b/sotuv sistem/profile/profil.css
@@ -1,6 +1,5 @@
     body {
-      background-color: #121212;
-      color: #fff;
+      color: white;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -25,11 +24,12 @@
       max-width: 500px;
       margin: 70px auto;
       padding: 30px;
-      background-color: #1f1f1f;
+      background-color: white;
       box-shadow: 0 0 30px #033D62;
       border-radius: 10px;
       text-align: center;
       transition: 0.5s;
+      color: black;
     }
 
     .profile-img {
@@ -37,7 +37,7 @@
       height: 150px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid #454545;
+      border: 3px solid #033D62;
       margin-bottom: 10px;
     }
 
@@ -47,9 +47,13 @@
 
     .edit-icon {
       cursor: pointer;
-      color: #ccc;
+      color: #033D62;
       margin-left: 10px;
       font-size: 18px;
+    }
+
+    .edit-icon:hover{
+      color: white;
     }
 
     .info {
@@ -95,7 +99,7 @@
 
     #logoutBtn {
       margin-top: 20px;
-      background-color: #555;
+      background-color: #033D62;
       color: white;
       border: none;
       padding: 10px 20px;
@@ -107,7 +111,6 @@
     }
 
     #logoutBtn:hover {
-      background-color: #033D62;
       box-shadow: 0 0 20px #033D62;
     }
 
@@ -120,10 +123,7 @@
       height: 32px;
       border-radius: 6px;
       padding: 4px;
-    }
-
-    .close:hover {
-      background-color: rgba(99, 99, 99, 00.5);
+      background-color: #033D62;
     }
 
     .notes {
