--- a/sotuv sistem/savdo/savdo.css
+++ b/sotuv sistem/savdo/savdo.css
@@ -114,7 +114,6 @@ nav .hreflar a {
     top: 100px;
     left: 60px;
     width: 1800px;
-    height: 800px;
     display: none;
     border-radius: 10px;
     border: 1px solid black;
@@ -172,32 +171,12 @@ nav .hreflar a {
 
 }
 
-.savdo-box input {
-    padding: 10px;
-    width: 18%;
-    border-radius: 10px;
-    overflow: none;
-    border: none;
+.savdo-box table{
+    width: 80%;
+    border-collapse: collapse;
+}
+
+.savdo-box table td {
     border: 1px solid black;
-
-}
-
-.savdo-box .add {
     padding: 10px;
-    width: 10%;
-    border-radius: 10px;
-    overflow: none;
-    border: none;
-    background-color: #033D62;
-    color: white;
-}
-
-.savdo-box .delete {
-    padding: 10px;
-    width: 10%;
-    border-radius: 10px;
-    overflow: none;
-    border: none;
-    background-color: #033D62;
-    color: white;
 }
